Small improvements reported by error-prone: missing annotations, javadoc, etc